# adventofcode2025

day-01/src/: lib.rs  main.rs
day-02/: Cargo.toml
day-02/src/: lib.rs  main.rs
day-03/: Cargo.toml
day-03/src/: lib.rs  main.rs
day-04/: Cargo.toml
day-04/src/: lib.rs  main.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  main.rs
day-06/: Cargo.toml
day-06/src/: lib.rs  main.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: lib.rs  main.rs
day-08/: Cargo.toml
day-08/src/: lib.rs  main.rs
day-09/: Cargo.toml
day-09/src/: lib.rs  main.rs
day-10/: Cargo.toml
day-10/src/: lib.rs  main.rs
day-11/: Cargo.toml
day-11/src/: lib.rs  main.rs
day-12/: Cargo.toml
day-12/src/: lib.rs  main.rs
template/src/: lib.rs  main.rs
util/src/: lib.rs
