[package]
name = "day-06"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = { workspace = true }
rstest = { workspace = true }
itertools = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
util = { workspace = true }
polars = { version = "0.52.0", features = ["product"] }
