[package]
name = "day-11"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = { workspace = true }
rstest = { workspace = true }
itertools = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
util = { workspace = true }
pathfinding = "4.14.0"
petgraph = "0.8.3"
